force-app/main/default/objects/EmailMessage__e/EmailMessage__e.object-meta.xml
<CustomObject>
    <description>Email message event to handle send email message logic</description>
    <label>Email Message</label>
    <pluralLabel>Email Messages</pluralLabel>
</CustomObject>