force-app/main/default/objects/EmailMessage__e/fields/LogId__c.field-meta.xml
<CustomField>
    <fullName>LogId__c</fullName>
    <description>Log Id that email log need to link to.</description>
    <label>Log Id</label>
    <length>60</length>
    <type>Text</type>
</CustomField>