force-app/main/default/objects/EmailMessage__e/fields/ReplyTo__c.field-meta.xml
<CustomField>
    <fullName>ReplyTo__c</fullName>
    <description>Email address for reply to in email message</description>
    <label>ReplyTo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>