force-app/main/default/objects/EmailMessage__e/fields/TargetObjectId__c.field-meta.xml
<CustomField>
    <fullName>TargetObjectId__c</fullName>
    <description>Contact Id for email.</description>
    <label>Target Object Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>