force-app/main/default/objects/EmailMessage__e/fields/TemplateId__c.field-meta.xml
<CustomField>
    <fullName>TemplateId__c</fullName>
    <label>Template Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>