force-app/main/default/objects/EmailMessage__e/fields/TransactionId__c.field-meta.xml
<CustomField>
    <fullName>TransactionId__c</fullName>
    <label>TransactionId</label>
    <length>60</length>
    <type>Text</type>
</CustomField>