force-app/main/default/objects/EmailMessage__e/fields/WhatId__c.field-meta.xml
<CustomField>
    <fullName>WhatId__c</fullName>
    <description>Case that related to email message</description>
    <label>What Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>